--- a/references.bib
+++ b/references.bib
@@ -132,3 +132,22 @@ TLDR: It is shown that the initial ratio can induce emergent properties in cocul
 	note = {Publisher: Nature Publishing Group},
 	langid = {en}
 }
+
+@article{gao2021c,
+	title = {The initial inoculation ratio regulates bacterial coculture interactions and metabolic capacity},
+	author = {Gao, Chun-Hui and Cao, Hui and Cai, Peng and {Sørensen}, {Søren J.}},
+	year = {2021},
+	month = {01},
+	date = {2021-01},
+	journal = {ISME Journal},
+	pages = {29--40},
+	volume = {15},
+	number = {1},
+	doi = {10.1038/s41396-020-00751-7},
+	url = {https://www.nature.com/articles/s41396-020-00751-7},
+	note = {tex.ids= gaoInitialInoculationRatio2020, gaoInitialInoculationRatio2020a
+number: 1
+publisher: Nature Publishing Group
+TLDR: It is shown that the initial ratio can induce emergent properties in coculture and not only impacts the reproducibility of coculture experiments but also can influence the understanding of generic microbial ecology.},
+	langid = {en}
+}
