--- a/python-basic.qmd
+++ b/python-basic.qmd
@@ -1,4 +1,4 @@
-# Python 入门
+# Python 语言入门
 
 下面提供一个 Python 入门教程，从基础概念讲起，再介绍最佳实践，最后展示 Python 在数据科学和人工智能领域的两个应用示例。每个部分都有完整的代码示例，每行代码均附有详细中文注释，并对代码运行结果进行了解释。
 
