update grouped data analysis

--- a/grouped-data-analysis-in-action.qmd
+++ b/grouped-data-analysis-in-action.qmd
@@ -1,4 +1,59 @@
 # 分组数据分析实战
 
-在这一部分，将以 [@gao2021c]论文中的数据分析为例，通过复现论文中的图片，展示分组数据分析和可视化的重复性研究。
+在这一部分，将以 [@gao2021c]论文中的数据分析为例，展示分组数据分析和可视化的重复性研究。首先，我们简单介绍一下论文的研究背景、方法和主要结果。然后，使用原始数据进行可重复研究，通过复现论文中的图片，展示分组数据分析和可视化的重复性研究。
+
+## 研究背景
+
+- 细菌共培养（coculture）广泛用于微生物生态学研究
+- 初始接种比例是关键实验参数，影响微生物群落结构与功能
+- 研究目标：探究初始接种比例如何调控共培养系统的最终结构与代谢能力
+
+## 研究方法
+
+- 选取 **大肠杆菌 (E. coli K-12)** 与 **荧光假单胞菌 (P. putida KT2440)** 作为共培养模型
+- 在 71 种不同碳源条件下培养，初始比例从 **1:1000 到 1000:1**
+- 通过比色法 (Biolog GEN III) 评估碳源利用率 (CUE)
+- 通过 qPCR 测定共培养中两种菌的相对丰度
+
+## 主要结果
+
+### 初始接种比例影响最终菌群结构
+
+- 在 **59/71 种碳源** 中，不同初始比例导致最终比例显著不同
+- 但最终比例 **并非完全由初始比例决定**
+- **碳源偏好性** 对最终比例影响较大
+
+### 初始比例调控共培养的代谢能力
+
+- **1:1 和 1000:1 共培养** 在 14 种碳源上表现出 **更高的代谢能力**
+- **1:1000 共培养** 代谢能力较弱，与单菌培养相似
+- 可能机制：物种间 **代谢共生 (metabolic coupling)** 仅在特定初始比例下被触发
+
+### 初始比例和碳源共同决定菌间相互作用
+
+- **1:1000 共培养**：主要为 **负相互作用**（62%）
+- **1:1 和 1000:1 共培养**：更易形成 **正相互作用**（46% 和 30%）
+- **代谢互补性** 可能依赖于足够数量的两种菌共存
+
+## 研究结论
+
+- 初始接种比例不仅影响共培养实验的 **可重复性**，还可能 **改变微生物相互作用模式**
+- 碳源可调节初始比例对最终群落结构和功能的影响
+- 该研究为微生物群落的可控构建提供了新的思路
+
+
+## 数据准备
+
+论文的原始数据及分析代码都在 [GitHub](https://github.com/gaospecial/ratio) 上。首先，使用 Git 命令将代码克隆到本地：
+
+```bash
+git clone https://github.com/gaospecial/ratio.git --depth 1
+```
+
+然后，进入 `ratio` 目录：
+
+```bash
+cd ratio    
+```
+
 
